--- a/SimpleLinearRegression/2_SimpleLinearRegression.ipynb
+++ b/SimpleLinearRegression/2_SimpleLinearRegression.ipynb
@@ -39,8 +39,9 @@
     "\n",
     "def calc_ols_coef(x, y):\n",
     "    \"\"\"\n",
-    "    Calculate the estimator, a, of alpha from\n",
-    "    ordinary least squares regression.\n",
+    "    Calculate the estimators, a, of alpha\n",
+    "    and, b, of beta, from ordinary least squares\n",
+    "    regression.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
